# palzlib

./: .coverage  .gitignore  .isort.cfg  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: deployment.yml  deployment_old.yml
ai_assitant/: pyproject.toml
ai_assitant/src/ai_assistant/: client.py  models.py  prompt_parser.py
ai_assitant/src/ai_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ai_assitant/tests/: test_sentiments.py
athena/database/: db_client.py  db_mapping.py
athena/sentiment_analyzers/langs/dan/: sentiment_analyzer.py
athena/sentiment_analyzers/langs/eng/: sentiment_analyzer.py
athena/sentiment_analyzers/langs/hun/: emotion_analyzer.py  sentiment_analyzer.py
palzlib/database/: Readme.md  db_client.py  db_config.py  db_mapper.py  db_mapping.py
palzlib/name_recognizer/: hun_name_recognizer.py
palzlib/sentiment_analyzers/: README.md  __init__.py
palzlib/sentiment_analyzers/analyzers/: base_analyzer.py
palzlib/sentiment_analyzers/analyzers/dan/: sentiment_analyzer.py
palzlib/sentiment_analyzers/analyzers/eng/: sentiment_analyzer.py
palzlib/sentiment_analyzers/analyzers/hun/: sentiment_analyzer.py
palzlib/sentiment_analyzers/factory/: sentiment_factory.py
palzlib/sentiment_analyzers/langs/dan/: sentiment_analyzer.py
palzlib/sentiment_analyzers/langs/eng/: sentiment_analyzer.py
palzlib/sentiment_analyzers/langs/hun/: sentiment_analyzer.py
palzlib/sentiment_analyzers/models/: languages.py  sentiments.py
palzlib/sentiment_analyzers_old/: __init__.py  models.py
palzlib/sentiment_analyzers_old/langs/dan/: sentiment_analyzer.py
palzlib/sentiment_analyzers_old/langs/eng/: sentiment_analyzer.py
palzlib/sentiment_analyzers_old/langs/hun/: sentiment_analyzer.py
palzlib/zlogger/: logger.py
palzlib_db/: README.md  pyproject.toml
palzlib_db/src/: db_config.py
palzlib_db/src/palzlib_db/: db_client.py  db_config.py  db_mapper.py
palzlib_db/src/palzlib_db.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sentiment_analyzer/: README.md  pyproject.toml
sentiment_analyzer/src/analyzers/dan/: sentiment_analyzer.py
sentiment_analyzer/src/analyzers/eng/: sentiment_analyzer.py
sentiment_analyzer/src/sentiment_analyzer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sentiment_analyzer/src/sentiment_analyzer/analyzers/: base_analyzer.py
sentiment_analyzer/src/sentiment_analyzer/analyzers/dan/: sentiment_analyzer.py
sentiment_analyzer/src/sentiment_analyzer/analyzers/eng/: sentiment_analyzer.py
sentiment_analyzer/src/sentiment_analyzer/analyzers/hun/: sentiment_analyzer.py
sentiment_analyzer/src/sentiment_analyzer/factory/: sentiment_factory.py
sentiment_analyzer/src/sentiment_analyzer/models/: languages.py  sentiments.py
sentiment_analyzer_eng/: README.md  pyproject.toml
sentiment_analyzer_eng/src/sentiment_analyzer_eng/: __init__.py
sentiment_analyzer_eng/src/sentiment_analyzer_eng.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sentiment_analyzer_eng/src/sentiment_analyzer_eng/analyzers/: __init__.py  sentiment_analyzer.py
sentiment_analyzer_eng/src/sentiment_analyzer_eng/factory/: __init__.py  sentiment_factory.py
sentiment_analyzer_eng/src/sentiment_analyzer_eng/models/: __init__.py  sentiments.py
sentiment_analyzer_eng/tests/: test_sentiments.py
sentiment_analyzer_finbert/: README.md  pyproject.toml
sentiment_analyzer_finbert/client/: main.py
sentiment_analyzer_finbert/src/sentiment_analyzer_finbert.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sentiment_analyzer_finbert/src/sentiment_analyzer_finbert/analyzers/: __init__.py  sentiment_analyzer.py
sentiment_analyzer_finbert/src/sentiment_analyzer_finbert/models/: sentiments.py
sentiment_analyzer_finbert/tests/: test_sentiment_analyzer.py  test_sentiments.py
tests/: conftest.py
tests/test_database/: .coverage  test_db_client.py  test_db_config.py
tests/test_zlogger/: test_logger.py
