[tool.poetry]
name = "palzlib"
version = "0.4.1"
description = ""
authors = ["Zoltan Pal <zoomyster@gmail.com>"]
readme = "README.md"
packages = [
    { include = "palzlib" }
]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.38"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.1"
nltk = "^3.9.1"
transformers = "^4.49.0"
torch = "^2.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
warn_unused_configs = "True"
disallow_untyped_defs = "False"
ignore_missing_imports = "False"
exclude = [".venv"]

[tool.pylint]
max-line-length = 120
# W0212: protected access
disable = ["W0212"]

[tool.pytest.ini_options]
python_files = "test_*.py"
norecursedirs = ".* tmp* __pycache__ alchemy"
testpaths = [
    "tests",
]
addopts = "--cov=. --cov-report=term-missing"

[tool.coverage.run]
omit = [
    "__init__.py",
    "tests/*",
    "sandbox/*",
]
