[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-assistant"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Zoltán Pál", email = "zoomyster@gmail.com" }
]
dependencies = [
  "openai",
  "spacy"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["ai_assistant*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
