[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "palzlib-db"
version = "1.0.1"
description = ""
authors = [
  { name = "Zoltán Pál", email = "zoomyster@gmail.com" }
]
dependencies = [
  "sqlalchemy",
  "psycopg2-binary"
]

[tool.setuptools.packages.find]
where = ["src"]
