[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "palzlib-db"          # distribution name (recommended)
version = "0.1.2"
dependencies = ["sqlalchemy", "psycopg2-binary"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["palzlib_db*"]
