[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sentiment_analyzer"
version = "1.0.1"
description = "Sentiment analysis library for news"
authors = [
  { name = "Zoltán Pál", email = "zoomyster@gmail.com" }
]
dependencies = [
    "nltk",
    "transformers",
    "torch",
]

[tool.setuptools.packages.find]
where = ["src"]
